Fixed display of chart popover overflowing values

--- a/gui/client/3x.less
+++ b/gui/client/3x.less
@@ -260,6 +260,12 @@ body > .navbar .brand .icon {
     .run-details {
       cursor: pointer;
     }
+    .value {
+      max-width: 75px;
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+      display: inline-block;
+    }
     .popover-content {
       padding: 0;
       .chart-run-details {
